--- a/web/src/pages/Landing/styles.css
+++ b/web/src/pages/Landing/styles.css
@@ -47,12 +47,11 @@
 }
 
 .buttons-container a {
-    /* ==== */
-    width: 30rem;
-    height: 10.4rem;
-    /* ==== */
+    width:15rem;
+    height: 5.4rem;
     border-radius: 0.8rem;
     font: 700 2.0rem Archivo;
+    margin-top: 3rem;
     
     display: flex;
     align-items: center;
@@ -87,8 +86,13 @@
     background: var(--color-secundary-dark);
 }
 
+.buttons-container a img {
+    margin-right: 2.4rem;
+}
+
 .total-connections {
     font-size: 1.4rem;
+    margin-top: 1rem;
 
     display: flex;
     align-items: center;
@@ -98,8 +102,8 @@
 .total-connections img{
     margin-left: 0.8rem;
 }
-/* =========================================== */
-@media (max-width: 768px) {
+
+@media (max-width: 1023px) {
 
     .logo-container img {
         height: 6rem;
@@ -123,10 +127,8 @@
     }
 
     .buttons-container a {
-        /* ==== */
         width: 15rem;
         height: 5.5rem;
-        /* ==== */
         border-radius: 0.8rem;
         font: 700 2.0rem Archivo;
 
@@ -145,6 +147,10 @@
 
     .buttons-container a img{
         width: 4rem;
+    }
+
+    .buttons-container a img {
+        margin-right: 1rem;
     }
 
     .buttons-container a.study{
@@ -175,26 +181,61 @@
         margin-left: 0.8rem;
     }
 }
-/* ========================== */
-@media (min-width: 320px) {
+
+@media (min-width: 1024px) {
+    #page-landing-content {
+        max-width: 1100px;
+
+        display: grid;
+        grid-template-rows: 350px 1fr;
+        grid-template-columns: 2fr 1fr 1fr;
+        grid-template-areas: 
+        "logo hero hero"
+        "buttons buttons total";
+    }
+
+    .logo-container {
+        grid-area: logo;
+        align-self: center;
+        text-align: justify;
+        margin: 0;
+    }
+
+    .logo-container img {
+        margin-right: 100px;
+    }
+
     .logo-container h2 {
-        font-weight: 500;
-        font-size: 2.4rem;
-        line-height: 4.6rem;
-        margin-top: 0.8rem;
+        text-align: initial;
+        font-size: 3.6rem;
     }
-    
+
+    .logo-container img {
+        height: 100%;
+    }
+
+    .hero-image {
+        grid-area: hero;
+        justify-self: end;
+    }
+
     .buttons-container {
-        display: flex;
-        justify-content: center;
-        margin: 1rem 0;
+        grid-area: buttons;
+        justify-content: flex-start;
     }
-    
+
     .buttons-container a {
-        /* ==== */
-        width: 15rem;
-        height: 5.5rem;
-        /* ==== */
+        font-size: 2.4rem;
+    }
+
+    .total-connections {
+        grid-area: total;
+        justify-self: end;
+    }
+
+    .buttons-container a {
+        width:30rem;
+        height: 10.4rem;
         border-radius: 0.8rem;
         font: 700 2.0rem Archivo;
         
@@ -205,41 +246,5 @@
         text-decoration: none;
         color: var(--color-button-text);
         transition: background-color 0.2s;
-    }
-    
-    .buttons-container a:first-child {
-        margin-right: 1.6rem;
-    }
-    
-    .buttons-container a img{
-        width: 4rem;
-    }
-    
-    .buttons-container a.study{
-        background: var(--color-primary-lighter);
-    }
-    
-    .buttons-container a.give-classes{
-        background: var(--color-secundary);
-    }
-    
-    .buttons-container a.study:hover {
-        background: var(--color-primary-light);
-    }
-    
-    .buttons-container a.give-classes:hover{
-        background: var(--color-secundary-dark);
-    }
-    
-    .total-connections {
-        font-size: 1.4rem;
-    
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .total-connections img{
-        margin-left: 0.8rem;
     }
 }
